--- a/www/index.html
+++ b/www/index.html
@@ -58,8 +58,8 @@
             	<table width="100%" border="0" cellspacing="0" cellpadding="0">
                   <tr>
                     <td width="70px"><div align="right"><img src="images/cards.png"></div></td>
-                    <td style="padding:0 0 0 30px"><div align="center">Carros Guardados</div></td>
-                    <td style="padding:0 30px 0 0"><div align="right"><img src="images/arrow.png"></div></td>
+                    <td ><div align="center">Carros Guardados</div></td>
+                    <td width="70px" style="padding:0 30px 0 0"><div align="right"><img src="images/arrow.png"></div></td>
                   </tr>
                 </table>
             </div>
@@ -67,8 +67,8 @@
             	<table width="100%" border="0" cellspacing="0" cellpadding="0">
                   <tr>
                     <td width="70px"><div align="right"><img src="images/flag.png"></div></td>
-                    <td style="padding:0 0 0 30px"><div align="center">Busquedas antariores</div></td>
-                    <td style="padding:0 30px 0 0"><div align="right"><img src="images/arrow.png"></div></td>
+                    <td ><div align="center">Busquedas antariores</div></td>
+                    <td width="70px" style="padding:0 30px 0 0"><div align="right"><img src="images/arrow.png"></div></td>
                   </tr>
                 </table>
             </div>
@@ -85,8 +85,8 @@
             	<table width="100%" border="0" cellspacing="0" cellpadding="0">
                   <tr>
                     <td width="70px"><div align="right"><img src="images/calculator.png"></div></td>
-                    <td style="padding:0 0 0 30px"><div align="center">Calculador</div></td>
-                    <td style="padding:0 30px 0 0"><div align="right"><img src="images/arrow.png"></div></td>
+                    <td ><div align="center">Calculador</div></td>
+                    <td width="70px" style="padding:0 30px 0 0"><div align="right"><img src="images/arrow.png"></div></td>
                   </tr>
                 </table>
             </div>
@@ -94,8 +94,8 @@
             	<table width="100%" border="0" cellspacing="0" cellpadding="0">
                   <tr>
                     <td width="70px"><div align="right"><img src="images/key.png"></div></td>
-                    <td style="padding:0 0 0 30px"><div align="center">Vender mi carro</div></td>
-                    <td style="padding:0 30px 0 0"><div align="right"><img src="images/arrow.png"></div></td>
+                    <td ><div align="center">Vender mi carro</div></td>
+                    <td width="70px" style="padding:0 30px 0 0"><div align="right"><img src="images/arrow.png"></div></td>
                   </tr>
                 </table>
             </div>
@@ -112,8 +112,8 @@
             	<table width="100%" border="0" cellspacing="0" cellpadding="0">
                   <tr>
                     <td width="70px"><div align="right"><img src="images/internet.png"></div></td>
-                    <td style="padding:0 0 0 30px"><div align="center">Mapa</div></td>
-                    <td style="padding:0 30px 0 0"><div align="right"><img src="images/arrow.png"></div></td>
+                    <td ><div align="center">Mapa</div></td>
+                    <td width="70px" style="padding:0 30px 0 0"><div align="right"><img src="images/arrow.png"></div></td>
                   </tr>
                 </table>
             </div>
@@ -121,8 +121,8 @@
             	<table width="100%" border="0" cellspacing="0" cellpadding="0">
                   <tr>
                     <td width="70px"><div align="right"><img src="images/chat.png"></div></td>
-                    <td style="padding:0 0 0 30px"><div align="center">Contacto</div></td>
-                    <td style="padding:0 30px 0 0"><div align="right"><img src="images/arrow.png"></div></td>
+                    <td ><div align="center">Contacto</div></td>
+                    <td width="70px" style="padding:0 30px 0 0"><div align="right"><img src="images/arrow.png"></div></td>
                   </tr>
                 </table>
             </div>
