--- a/www/index.html
+++ b/www/index.html
@@ -34,7 +34,7 @@
                 <div class="grid_12">
                         <div class="rmm">
                             <ul>
-                                <li><a href='www.tebusco.com.ec/webservice/index.php'>Marca</a></li>
+                                <li><a href='basic.html'>Marca</a></li>
                                 <li><a href='#'>Tipo</a></li>
                                 <li><a href='#'>Modelo</a></li>
                                 <li><a href='#'>Precio</a></li>
@@ -46,7 +46,7 @@
         
         <div class="row" style="background:#00417c">
             <div class="grid_12 titu1" align="center">
-            	<a href='www.tebusco.com.ec/webservice/index.php'>
+            	<a href='basic.html'>
             	<table width="100%" border="0" cellspacing="0" cellpadding="0">
                   <tr>
                     <td width="70px"><div align="right"><img src="images/user.png"></div></td>
